--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE HTML>
+<head> 
+  <meta charset = 'UTF-8'>
+  <title>My CV</title>
+</head>
+<body>
+	<h1>MY CV</h1>
+	<img src = 'photo_2020-02-18_21-35-53.jpg' width = '100' height = '100'>
+<hr>
+<ol>
+<li><strong><p>Vlada Shegay</p></strong> </li>
+<li><p>my email: <a href = 'https://mail.google.com/mail/u/0/?pli=1#inbox?compose=CllgCJZXhRfkgrwxtqTfLlgLSrHvlvSVlZLRvCgNbwFBhdDBBpJGGSWXCvtGlZtQDbxMjTdZBtL'>My email</a></p>
+    <p>telegram: <a href = 'https://t.me/certainlynotvlada'>@certainlynotvlada</a></p></li>
+<li>...</li>  
+<li> None in particular</li>
+<li><p>One of the tasks (JS):</p></li> 
+<pre>
+   function findAll(str, substr){
+      let counter = 0
+    
+   for(let i =0; i < str.length ){
+      let searchpl = str.indexOf(substr,i)
+      if(searchpl != -1){ /*you can also use {break} here, instead of the construction given
+      the value can not be less than -1 since it will result in
+      {break;}*/
+         counter ++
+         i = substr.length +searchpl
+      }
+   }
+   return counter
+   }
+	</pre>
+ <li><p>None in particular</p></li>
+<li> <p>Currently studying in rsschool</p></li>
+<li><p>Around 1 year of practice with 
+a private tutor and 6 mounths<br> of IELTS
+preparation in the 'Inter-nation' educational centre</p></li>
+</ol>
+</body>
